k8s/wip/mailhog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: collectif-objets
    app.kubernetes.io/instance: collectif-objets-dev1
    app.kubernetes.io/component: mailhog
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: collectif-objets
      app.kubernetes.io/instance: collectif-objets-dev1
      app.kubernetes.io/component: mailhog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: collectif-objets
        app.kubernetes.io/instance: collectif-objets-dev1
        app.kubernetes.io/component: mailhog
    spec:
      containers:
        - image: mailhog/mailhog
          name: mailhog
          ports:
            - containerPort: 8025
              protocol: TCP
      restartPolicy: Always
