k8s/wip/vite-dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: vite-dev
  name: vite-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vite-dev
  template:
    metadata:
      labels:
        io.kompose.service: vite-dev
    spec:
      containers:
        - args:
            - bundle
            - exec
            - vite
            - build
          image: collectif-objets-ror
          name: vite-dev
      restartPolicy: Always
