k8s/wip/mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: collectif-objets
    app.kubernetes.io/instance: collectif-objets-dev1
    app.kubernetes.io/component: mailhog
  name: mailhog
spec:
  ports:
  - name: "8025"
    port: 8025
    targetPort: 8025
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: collectif-objets
    app.kubernetes.io/instance: collectif-objets-dev1
    app.kubernetes.io/component: mailhog
